--- a/env.example
+++ b/env.example
@@ -1,7 +1,14 @@
 PORT=3000
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_password
-POSTGRES_DB=newsdb
-JWT_SECRET=your_secret
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=your_password
+DB_NAME=yourDBname
+
+COOKIE_SECRET=
+OTP_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=
+PHONE_TOKEN_SECRET=
+EMAIL_TOKEN_SECRET=
+USERNAME_TOKEN_SECRET=
+
